--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -70,7 +70,7 @@
 
 
         <RelativeLayout
-
+            android:visibility="gone"
             android:id="@+id/ll_yesLogin"
             android:layout_width="match_parent"
             android:layout_height="100dp"
@@ -107,12 +107,14 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/login_head"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
-                android:src="@drawable/default_icon" />
+                android:src="@drawable/default_icon"
+                 />
         </RelativeLayout>
 
 
