--- a/app/src/main/res/layout/activity_personal_data.xml
+++ b/app/src/main/res/layout/activity_personal_data.xml
@@ -34,15 +34,16 @@
 
                 android:id="@+id/headView"
                 android:layout_width="120dp"
+                android:src="@drawable/default_icon"
 
                 android:layout_height="120dp"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/default_icon"
+
                 app:civ_border_color="@color/transparent"
                 app:civ_border_width="1dp"
-                app:civ_fill_color="@color/yello_one" />
+                app:civ_fill_color="@color/pressed_false_green" />
 
 
             <LinearLayout
