--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -22,5 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.mayinews.g.view.CanotSlidingViewpager>
+    <ProgressBar
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <include layout="@layout/top_bottom"  android:visibility="gone" android:id="@+id/tob_bottom" />
 </RelativeLayout>
